--- a/src/input.css
+++ b/src/input.css
@@ -26,6 +26,9 @@
   --second-family: "Roboto", sans-serif;
   --third-family: "DINPro", sans-serif;
   --font3: "Source Han Sans SC", sans-serif;
+  --font-family: "Open Sans", sans-serif;
+  --second-family: "Tinos", sans-serif;
+  --third-family: "Cookie", sans-serif;
   --font4: "Gilroy", sans-serif;
   --font5: "SF Pro Text", sans-serif;
 }
